--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-ntp_version: "1:4.2.6.p5+dfsg-3ubuntu2"
+ntp_version: "1:4.2.*"
 ntp_servers:
   - 0.ubuntu.pool.ntp.org
   - 1.ubuntu.pool.ntp.org
