--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,6 +3,9 @@
   apt: pkg=ntp={{ ntp_version }} state=present
 
 - name: Configure NTP
-  template: src=ntp.conf.j2 dest=/etc/ntp.conf
+  template: src={{ item }} dest=/etc/ntp.conf
+  with_first_found:
+    - "ntp.conf.{{ ansible_distribution_release }}.j2"
+    - "ntp.conf.default.j2"
   notify:
     - Restart NTP
